Importer OBJ dziala
Tak jak w tytule. Z drobnym zaznaczeniem, że importer tekstur albo
koordynaty uv się nie zgadzają, więc to jest następne na celowniku.

--- a/Put Nukem 3d.cbp
+++ b/Put Nukem 3d.cbp
@@ -70,6 +70,10 @@
 		<Unit filename="Kernel.h" />
 		<Unit filename="Log.cpp" />
 		<Unit filename="Log.h" />
+		<Unit filename="MeshObject.cpp" />
+		<Unit filename="MeshObject.hpp" />
+		<Unit filename="ObjLoader.cpp" />
+		<Unit filename="ObjLoader.h" />
 		<Unit filename="ProfileLogHandler.cpp" />
 		<Unit filename="ProfileLogHandler.h" />
 		<Unit filename="Put Nukem 3d.layout" />
